--- a/contents/compelling.tex
+++ b/contents/compelling.tex
@@ -1,15 +1,11 @@
 \newpage
 \section{Compelling}
-The human being moves by the power of seduction, only if we feel attracted will we put our
-interest and effort to achieve it. This shows us that in the representations that we make, we will have to
-worry about the effect it transmits, the hook it has for others, more attraction, more
-Level of involvement by the user. \\
+It is human nature to be attracted by the easy, the eye-catching, the interesting. We are more likely to expend time and energy on something we find attractive and compelling. We must design our interface and representations with this in mind, to attract users and maximize their engagement. 
+There is a wealth of relevant marketing research that we can draw upon to capture new users and keep their interest.
 
-The marketing departments have been studying different techniques during the last years,
-so we can apply your consent to reach our users and they want to continue with us.
 
-In this section we will review the different points to implement a product that stays in mind
-of the user and this is irresistibly attracted to use it.
+In this section we will review strategies to creating a product that attracts and stays in mind
+of the user.
 \input{contents/compelling/mission.tex}
 %\input{contents/compelling/advantage.tex}
 \input{contents/compelling/engagement.tex}
