--- a/contents/compelling/attractive.tex
+++ b/contents/compelling/attractive.tex
@@ -1,48 +1,42 @@
 \subsection{Attractive}
-It is important that the information is attractive, eye-catching, with spark. Not only from a conceptual point of view
-or functional as we saw in the relevant section, where we made clear the implication of the data and the importance
-of its correct presentation, with a structure that guides the user in a logical and orderly manner.
+It is important that the information is attractive, eye-catching and with sparkle. This is not only important from a conceptual point of view, but also from a functional one. We saw this previously, where we considered the importance
+of good data presentation, using a structure that guides the user in a logical and orderly manner.
 
-It has to grab our attention, for this we can propose the following requirements, that is fun, entertaining,
-modern, current, close, quality, beautiful and harmonious.
+We want to grab the users attention from the outset. For this we propose the following desirable features for the tool- that it be fun, entertaining,
+modern, current, easy to use, high quality, attractive and beautiful.
 
-Although these characteristics are subjective, there are techniques to achieve these objectives.
+Although some of these characteristics are subjective, there are techniques available to achieve these objectives.
 
 Other more technical characteristics are: \\
 
-\textbf{Consistency.} Controls that perform the same actions must maintain the same design. The functionalities
-they should also follow this principle \\
+\textbf{Consistency.} Controls that perform similar actions must maintain the same design. Functionalities
+should also follow this principle. \\
 
-\textbf{Cleaning and order.} An orderly design will convey a better feeling and the user will be able to locate what they are looking for
-more easily\\
+\textbf{Cleaning and order.} An organized design looks better and enables the user to find what they are looking for
+more easily.\\
 
-\textbf{Details.} A label with different typology or other color may disturb the user's perception. If not
-we want to highlight something in particular, it seems like an error \\
+\textbf{Details.} A label with different typology or other color may jarr the user's perception. Only use when
+we want to highlight something in particular! \\
 
-\textbf{Sena de identidad.} It is highly recommended to use something unique that identifies us and that the user is capable of
-to recognize ourselves quickly, this can be an image, a combination of colors, a logo, etc.
+\textbf{Sena de identidad.} It is highly recommended to 'brand' ourselves, so that users can recognize us quickly. For this we can utilize a symbol, a combination of colors, a logo, etc.
 
-To be able to hook our users, gamification is currently widely used, where it is given to the form of
-represent the data a game aspect. The user starts using it because it catches his attention, it's fun,
-but at some point that initial attraction disappears, even so, the user has learned to use the data and
-he feels attracted to continue using them.
+To be able to hook our users, gamification is currently widely used. This is where we give a gaming aspect to the representation of the data. The user tries it because it catches their attention, it's fun.
+Certainly, at some point the novelty wears off, but, even so, the user has learned to use the interface and now feels well-disposed to continue to use it.
 
 \subsubsection{How to solve it} 
-To be able to make an attractive design, it is necessary to study the trends of the moment, the good practices of design and apply them.
-It is highly recommended to maintain a simple and clean design, use standards or mechanisms that are familiar to users,
-take care of the details and mark our identity.
+To make an attractive design, we must keep abreast of current trends, as well as study good design practices.
+It is highly recommended to maintain a simple and clean design, to use standards and mechanisms that are familiar to users,
+to care of details and to present a consistent identity.
 \subsubsection{How we solve it. Aire Guru} 
-As we commented previously the design has been based on material design, use straight lines, difference
-different sections by rectangles and uses colors that constrain enough between the information and the background.
-The background color for the graphics is white, since most use different colors and white is a color
-neutral. Only the shades of blue, gray and white are used. In addition, a font that is easy to read if decoration is used.
+As we commented previously the design has been based on Google's Material Design, using straight lines, differentiating individual sections by using rectangles and using colors that contrast the information from the background.
+The background color for the graphics is a neutral white. Only shades of blue, gray and white are used. In addition, we have chosen a font that is easy to read.
 
-The sections are arranged neatly and structured. These are composed of a header and a body.
+The sections are arranged neatly and structured by using a header and a body.
 
 The central page consists of a header, the body and a footer. Both the header and the footer are static,
-they are shown in all the pages and they continue all the information available to navigate between pages.
-The body is divided into three horizontal sections, the upper zone with the map and the general information of the selected point,
-the average zone where we can filter the polluting agents by medical conditions and information about the current situation and the
+they are shown in all the pages and they contain all the information needed to navigate between pages.
+The body is divided into three horizontal sections, the upper area with the map and the general information about the selected point,
+the central area where we can filter the polluting agents by medical conditions and information about the current air status, and the
 lower area where we will find the zone and custom history.
 
 \begin{figure}[ht]
@@ -51,15 +45,15 @@ lower area where we will find the zone and custom history.
     \caption{Heading}
 \end{figure}
  
-    The symbol of our tool is a genius, that is to say a guru, besides, we include "Aire" in the logo, because it represents perfectly
-    what we show Our tool is the genius of Air.
+    The symbol of our tool is a genius, ie a guru. We also include "Aire" in the logo, because it perfectly represents 
+    what we show with our tool. Aire Guru is the genius of air.
     
-    Finally, it has been taken into account that the user can use our tool in different devices, so they have been implemented
-    two different formats, one for larger screens such as the computer and another for smaller format for tablet or mobile.
+    Finally, we've taken into account that the user may wish to use our tool on different devices. We've implemented
+    two different formats, one for larger screens such as the computer and another for smaller format tablets or mobiles.
 \elsparagraph{Evaluation}  
 \begin{itemize}
     \done
-    \crossed Although there have been attempts to implement the design lines that are now on the market, the design can be improved
+    \crossed Although there have been attempts to implement the design aesthetics that are now trending on the market, the design can be improved.
     
 \end{itemize}
 \newpage
