--- a/contents/compelling/userExperience.tex
+++ b/contents/compelling/userExperience.tex
@@ -1,64 +1,53 @@
 \subsection{User Experience}
-The system can display the data in a precise, optimized, fully customized way and offer you
- the possibility for the user to improve his life considerably, however, if we do not provide an experience
- user friendly and reacting to our actions, all our efforts will be in vain.
- The user should feel that the system offers information in a fluid, clean, intuitive, direct and with
+The system can display the data in a precise, optimized, fully customized way. It can offer the user
+ the possibility to improve their life considerably. However, if we do not provide a user friendly experience, all our efforts will be in vain.
+ The user should feel that the system offers information in a fluid, intuitive, direct, straightforward manner and with
  a logical sequence.
   
-This sequence will allow the user the possibility of investigating by itself, as if the writing of a novel was about.
+This logical sequence will allow the user the possibility of doing further investigating by themselves.
 
-We look for simplicity since the objective is to represent the information, we will flee from any unnecessary decoration
-the main objective. Remember that less is more. A complicated design, with many colors and different abstract shapes
-It will be more difficult to interpret by the user.
+We look for simplicity in representing the information, we will avoid unnecessary ornamentation. Remember that less is more. A complicated design, with too many colors and too many different abstract shapes will be more difficult to interpret.
 
-The representation must be out of all ambiguity, not show information that is deceptive or that has to be dedicated
-too much time fixing on the details to be able to interpret it correctly. When representing the information it will be
-including what is basically necessary, always fleeing from ornate graphics that only contribute noise to the represetation.
+The representation must be unambiguous. We must not show information that is deceptive, or that requires time wasted in interpreting. When representing the information, we will 
+include only what is truly necessary, always avoiding ornate graphics that only contribute noise to the representation.
 
-We will seek to create familiarity, that the user can quickly understand the structures used and
-It is easy for you to move with the minimum possible learning time.
+We will seek to evoke familiarity, so that the user can quickly understand the structures used,
+and therefore the minimum possible learning time is required.
 
-In addition, in the market there are several standards to which the user is accustomed and knows what to expect.
-For example a magnifying glass, we relate it to the action of searching, if we use this icon, the user will quickly know that
-function performs, however, if we use a completely new one, it can even confuse the user \\
+In addition, in the wider world, there are several standards to which the user is already accustomed.
+For example a magnifying glass is a familiar symbol for searching. If we use this icon, the user will quickly know what
+function that performs, so it makes no sense to design a brand new icon.
+It is important to give the user a degree of flexibility, that is, to enable them to make their own selections to be find the data that interests them.
 
-It is important to give the user a degree of flexibility, that is able to make their own selections to be able to see
-the data you are interested in
-
-When we speak of fluency, we refer to user-system interactions, it is important that interactions
-Be like a two-way conversation, where you ask and let them know you are listening and responding. When the user
-requires information from the system, this will make a change that allows the user to know that he has received his action and
-with a time of no more than five seconds, it must provide an answer.
+When we speak of fluidity, we refer to user-system interactions.It is important that interactions
+be like a two-way conversation, where you ask and let them know you are listening and responding. When the user
+requires information from the system, they receive an indication that their request is being processed, and within no more than five seconds, an answer will be provided.
     
 \subsubsection{How to solve it} 
-We must analyze carefully what information we want to present and we will focus on this objective. We will make a
-clean design, where all the elements are easy to recognize.
+We must analyze carefully what information we want to present. We will make a clear design, where all the elements are easy to recognize.
 The structure will entail a logical sequence, as if it were a narrative history.
-Each action that the user can perform, must implement a clear indication and offer results in a
-period of less than five seconds.
-We will flee from more complicated representations of the user level, we will try to apply familiarity and intuitiveness.
-That is, if a calendar is used for the election of dates, it does not make sense to use an hourglass, this will confuse
-much more to the user.
-Offer flexibility, the user must be able to interact and choose what they want to see.
+Each action that the user perform, must be clearly acknowledged (eg by some change in a button, or a spinning wheel icon) results must be delivered in less than five seconds.
+We will steer clear of complicated representations, we will aim for familiarity and intuitiveness.
+For example, if a calendar is used for the selection of dates, it doesn't make sense to use an hourglass, this will just be confusing forthe user.
+Offer flexibility, the user must be able to interact with the interface and choose what they want to see.
 
 \subsubsection{How we solve it. Aire Guru} 
-Our tool uses an interpretation of material design, which uses a clean design, without borders or decorations.
-A range of blue shades in combination with white and gray is used looking for a relaxed environment.
-Care has been taken that all texts have a level of contrast with their background, so that it is easy to read.
+Our tool uses an interpretation of Google's Material Design, which is very clean, without borders or decorations.
+We chose a range of blue shades in combination with white and gray to evoke a relaxed atmosphere.
+Importantly, we've taken care that all text has a good level of contrast with the background, so that it is easy to read.
 
-The graphics are designed in 2D, since they are easier to interpret and we escape from the ambiguity that can
-provide depth as a measure.
+The graphics have been designed in 2D, since they are easier to interpret and we lack the ambiguity that can occur when using depth as a measure.
 
 
-The workflow of the different sections of Aire Guru is studied in detail.
-Air Guru is comprised of different sections. By selecting a point on the map, we
-will show detailed information on this point. Then, it has a section that will filter the information according to the preferences of the user
-and to conclude, it shows the history of pollutants since 2018 and the history of the pollution to which the user has been
+The workflow of the different sections of Aire Guru is thought about in detail.
+Aire Guru consists of different sections. By selecting a point on the map, we
+will show detailed information for this point. The next section filters the information according to the preferences of the user
+and lastly, it shows the history of pollutants since 2018 and the history of the pollution to which the user has been
 exposed.
 
-It is expected that the user will be interested in the level of pollution to which is exposed in real time, therefore, for users
-that are identified and agree to share their location, Air Guru will directly show the pollution at the point where
-found.
+It is expected that the user will be interested in the level of pollution to which they are exposed in real time. Therefore, for users
+that are identified and agree to share their location, Air Guru will show the pollution directly at the point where they are.
+
 
 \begin{figure}[ht]
     \centering
@@ -66,9 +55,8 @@ found.
     \caption{My Location}
 \end{figure}
 
-Regarding flexibility, the user can see the situation of the air pollution by dates. Filtering in the area
-intermediate, can be done both by medical conditions and by contamientes agents. Finally, in the lower area where we have
-the historical by area and personalized, we can visualize the information with different granularity, time, day, month and year and we can also
+Regarding flexibility, the user can see the state of the air pollution by dates. Intermediate filtering can be done both by medical conditions and by contaminants. Finally, in the lower area where we have
+the historical data by area and personalization, we can visualize the information with different levels of detail; time, day, month and year. We can also
 select the date we want.
 
 \begin{figure}[ht]
@@ -84,13 +72,12 @@ select the date we want.
   
   \caption{Filters}
     \end{figure}
-    The same style, colors and iconography are used throughout the design so that the user can get familiar quickly and can
-    Pay attention to the meaning of the data instead of getting lost in the design and trying to find its meaning.
+    The same style, colors and iconography are used throughout the design so that the user can quickly become familiar with how it works, and can
+    concentrate on the meaning of the data, rather than being distracted by trying to figure out what to do.
     
     Due to the large amount of data that is offered to the user, a waiting wheel has been implemented to indicate
     that the tool is processing information. Each time a control is pressed on the page, it is indicated with a change
-    of tonality. Also progressive transitions are used, when the graphics have to represent new information it does not
-    at once, as this could produce a guide that can be interpreted as an error on the part of the user.
+    of color tonality. Also, progressive transitions are used, to indicate a process is happening.
     
     \begin{figure}[ht]
         \centering
@@ -115,12 +102,11 @@ select the date we want.
       \caption{Standard widgets}
         \end{figure}
 
-        The elements that give us familiarity are the iconography that we use to show the AQI. We use clouds, by representation
-             of the air, the environment, it is accompanied by a heart if the quality is good, of a symbol of exclamation if it is poor, of a cross if it is
-             bad and we change to a gas mask if the state is unhealthy.
+        The elements that give us familiarity are the iconography that we use to show the AQI. We use clouds representing
+             the air. The environment is accompanied by a heart if the quality is good, by an exclamation mark if it is poor, by a cross if it is
+             bad, and we change to a gas mask if the state is unhealthy.
             
-             Today we are all used to GoogleMaps maps, so it has been integrated to represent the map and not another,
-             since users are familiar with how they look and how they are used.      
+             Today we are all familiar with GoogleMaps maps, so it makes sense to integrated this function.      
 
 
 
@@ -128,11 +114,11 @@ select the date we want.
 
 \elsparagraph{Evaluation}  
 \begin{itemize}
-    \done Has a relaxed aesthetic where graphics with information prevail
-   \done The representation follows a sequence logic
-    \done Familiarity, repetition of structures and colors that represent the same and respect standards
-    \done Flexibility. The user can make multiple selections
-    \crossed Waiting times should be improved
+    \done Has a prevailing relaxed visual aesthetic.
+   \done The representation follows a logical sequence.
+    \done Familiarity - repetition of structures and representational colors create quick familiarity with the interface, and commonly used standard iconography is respected.
+    \done Flexibility. The user can make multiple selections.
+    \crossed Waiting times should be improved.
     
 \end{itemize}
 \newpage
