--- a/contents/evaluation.tex
+++ b/contents/evaluation.tex
@@ -1,26 +1,23 @@
 \newpage
 \section{Evaluation}
-For the evaluation of the user experience, 14 users have been presented who test the tool freely.
-After a week, test users are proposed a survey that contains questions about understandability
-of information and about usability. Also, in the case of the questions so that the
-Respondents can make their own contributions.
+For the evaluation of the user experience, 14 users tested the tool.
+After a week, test users completed a survey that contained questions about how understandable the information was
+and how useable it was. Additionally, respondants could make their own comments.
 \begin{figure}[ht]
    \centering
    \includegraphics[width=12cm]{enqueteResults}
    \caption{Part of the user experience enquete results}
 \end{figure}
 
-Regarding the comments, most of the respondents agree that the functionality they liked the most is to see in the
-map the air quality index and suggest an enlargement the number of zones.
-92 \% of the respondents find the information useful and complete and 71.43 \% have answered that they also find it
+Most of the respondents agreed that the functionality they liked the most, was to see the air quality index actually in the
+map, and suggested increasing the number of zones.
+92 \% of the respondents found the information useful and complete, and 71.43 \% answered that they also found it
 understandable.
 More than half of the respondents admit that they did not know the meaning of the air quality index, but after
-consult the help, they have understood it.
-Regarding their interests on air quality, half of them indicate that they have ever sought information about it,
-only two are well informed and one of them marks the other option and specifies that it has aroused their interest after using
-the application.
-In addition, four of them indicate that they have discovered that they have a medical condition that affects the quality of the air thanks
-to the tool.
+using the tool, they now understand it.
+Regarding their interest about air quality, half of them indicated that they had never sought information about it,
+only two were previously well informed, and one of them marked the 'other' option and specified that using the application had aroused their interest.
+In addition, four of them indicated that, thanks to the tool, they have now discovered they have a medical condition that is affected by air quality.
 
-Among the test subjects, a greater awareness of pollution has been recognized, showing more interest in the
-air quality in the city and its possible effects on health
+Among the test subjects, a greater awareness of pollution has been recognized, and they now show more interest in the
+air quality in the city and its possible effects on their health.
