--- a/contents/relevant/userOriented.tex
+++ b/contents/relevant/userOriented.tex
@@ -1,6 +1,6 @@
 \subsection{Focus on the user}
 A large part of the objective outlined in section 3.1, design, is defined by the service that we want to offer
-to the user. To assist the user, (our client), is our primary purpose. \\
+to the user. Asssisting the user, (our client), is our primary purpose. \\
 
 
 We must be aware of the needs of users in order to meet their demands, as well as being aware of deficiencies in the market, so we can cover any 'holes'.
@@ -9,7 +9,7 @@ We should cater for all audiences equally
 Whether our target audience is unique, that is, take all types of users equally, considering the
 average user, as for a characteristic user, we should know the homogeneous characteristics of our group.
 
-Therefore we need a current study on the psychological, social and economic level of the target group, to discover, not only
+Therefore we need a current study on the psychological, social and economic level of the target group, to ascertain not only
 their needs, but also their wishes.
 
 Once the users have access to the data we provide, it is important to have a feedback process.
@@ -56,7 +56,7 @@ user behavior, how many pages they access, and how long they stay on them. Also,
 \elsparagraph{Evaluation}  
 \begin{itemize}
     \done The market study made us clearly see the shortcomings that exist in current applications.
-    \done The survey gave us very positive evaluations regarding the useability, interpretability, and depth of information reported.
+    \done The survey gave us positive evaluations regarding the useability, interpretability, and depth of information reported.
     \done Thanks to Aire Guru, users were informed about medical conditions with the potential to affect them personally, that could be caused or made worse by air pollution.
 
 \end{itemize}
